# PersonalBlogWebsite

./: .env.example  pyproject.toml  requirements.txt
blogWebApp/: settings.py
templatesByAvinash/: blogPage.html  combined.html  footerTemplate.html
templatesByAvinash/styles/: blogPageStyle.css  footerTemplate.css
